# Axon-term

./: .gitignore  CONTRIBUTING.md  README.md  README_CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: tauri-build.yml
src/: App.tsx  HostContext.test.tsx  HostContext.tsx  I18nContext.tsx  SettingsContext.tsx  SnippetContext.tsx  ThemeContext.tsx  constants.ts  i18n.ts  index.css  main.tsx  metadata.json  setupTests.ts  types.ts
src-tauri/: Cargo.toml  clean.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app/: commands.rs  errors.rs  mod.rs  ssh_pool.rs  state.rs
src-tauri/src/application/: github_service.rs  host_service.rs  mod.rs  session_service.rs  sftp_service.rs  terminal_service.rs
src-tauri/src/commands/: github.rs  hosts.rs  mod.rs  sessions.rs  settings.rs  sftp.rs  snippets.rs  terminal.rs
src-tauri/src/domain/: host.rs  mod.rs  session.rs  sftp.rs
src-tauri/src/dto/: hosts.rs  mod.rs  sessions.rs  sftp.rs  terminal.rs
src-tauri/src/events/: session.rs  terminal.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/pty/: mod.rs
src-tauri/src/infrastructure/secure_store/: crypto.rs  keyring.rs
src-tauri/src/infrastructure/ssh/: auth.rs  client.rs  mod.rs  port_forward.rs  sftp.rs
src-tauri/src/utils/: history.rs  mod.rs  paths.rs  validation.rs
src/components/: GlobalSearch.tsx  HostEditorModal.tsx  HostListView.tsx  RightDrawer.tsx  (+7 more)
website/: index.html  main.js  style.css  translations.js
(+20 files in other folders)
